--- a/labb2/Base.lproj/Main.storyboard
+++ b/labb2/Base.lproj/Main.storyboard
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,141 +19,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1d0-qK-irR" customClass="gamePlan" customModule="labb2" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1d0-qK-irR" customClass="gamePlan" customModule="labb2" customModuleProvider="target">
                                 <rect key="frame" x="20" y="20" width="560" height="560"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WW7-aF-P4N">
-                                        <rect key="frame" x="8" y="8" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="OUL"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ix-JU-PR2">
-                                        <rect key="frame" x="240" y="8" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="OU"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ird-od-yfi">
-                                        <rect key="frame" x="472" y="8" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="OUR"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gD8-kC-NOG">
-                                        <rect key="frame" x="472" y="240" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="OR"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4AN-jP-Bdo">
-                                        <rect key="frame" x="472" y="472" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="ODR"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZAY-ff-ZEX">
-                                        <rect key="frame" x="240" y="472" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="OD"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzO-s3-Sy2">
-                                        <rect key="frame" x="8" y="472" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="ODL"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y28-k7-jhR">
-                                        <rect key="frame" x="8" y="240" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="OL"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="heX-dE-ird">
-                                        <rect key="frame" x="240" y="96" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="MU"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nwJ-1b-eyt">
-                                        <rect key="frame" x="96" y="240" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="ML"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z02-1w-2zt">
-                                        <rect key="frame" x="96" y="96" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="MUL"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MdR-N9-DLg">
-                                        <rect key="frame" x="384" y="384" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="MDR"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIc-A2-alE">
-                                        <rect key="frame" x="96" y="384" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="MDL"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WbY-VU-iSI">
-                                        <rect key="frame" x="240" y="384" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="OD"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q1b-WW-iv6">
-                                        <rect key="frame" x="384" y="240" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="MR"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m8H-KC-RXL">
-                                        <rect key="frame" x="384" y="96" width="80" height="80"/>
-                                        <animations/>
-                                        <state key="normal" title="MUR"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zfA-fa-DXq">
-                                        <rect key="frame" x="311" y="257" width="46" height="46"/>
-                                        <animations/>
-                                        <state key="normal" title="IR"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kr3-ud-eR0">
-                                        <rect key="frame" x="203" y="257" width="46" height="46"/>
-                                        <animations/>
-                                        <state key="normal" title="IL"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ymm-ce-Y9i">
-                                        <rect key="frame" x="257" y="203" width="46" height="46"/>
-                                        <animations/>
-                                        <state key="normal" title="IU"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KAD-Hg-XmW">
-                                        <rect key="frame" x="311" y="203" width="46" height="46"/>
-                                        <animations/>
-                                        <state key="normal" title="IUR"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V6S-QY-Xyq">
-                                        <rect key="frame" x="311" y="311" width="46" height="46"/>
-                                        <animations/>
-                                        <state key="normal" title="IDR"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cf9-mu-CjS">
-                                        <rect key="frame" x="257" y="311" width="46" height="46"/>
-                                        <animations/>
-                                        <state key="normal" title="ID"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z5j-6z-WXz">
-                                        <rect key="frame" x="203" y="311" width="46" height="46"/>
-                                        <animations/>
-                                        <state key="normal" title="IDL"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qq2-e5-7Jk">
-                                        <rect key="frame" x="203" y="203" width="46" height="46"/>
-                                        <animations/>
-                                        <state key="normal" title="IUL"/>
-                                    </button>
-                                </subviews>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="1d0-qK-irR" secondAttribute="height" multiplier="1:1" id="uf7-VM-RwW"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="leadingMargin" secondItem="1d0-qK-irR" secondAttribute="leading" id="8Bw-Dj-Ad1"/>
+                            <constraint firstItem="1d0-qK-irR" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="MZb-cb-A54"/>
+                            <constraint firstItem="1d0-qK-irR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Q9V-om-VZZ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="407" y="418"/>
+            <point key="canvasLocation" x="297" y="378"/>
         </scene>
     </scenes>
 </document>
