--- a/labb2/Base.lproj/Main.storyboard
+++ b/labb2/Base.lproj/Main.storyboard
@@ -22,125 +22,125 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1d0-qK-irR" customClass="gamePlan" customModule="labb2" customModuleProvider="target">
                                 <rect key="frame" x="20" y="181" width="374" height="374"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Imd-NE-ka2">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Imd-NE-ka2">
                                         <rect key="frame" x="32" y="8" width="31" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="OUL"/>
+                                        <state key="normal" title="3"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5wi-YL-OZT">
                                         <rect key="frame" x="172" y="8" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="OU"/>
+                                        <state key="normal" title="6"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kGY-MO-QQm">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kGY-MO-QQm">
                                         <rect key="frame" x="312" y="8" width="32" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="OUR"/>
+                                        <state key="normal" title="9"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SdH-fh-blA">
                                         <rect key="frame" x="313" y="172" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="OR"/>
+                                        <state key="normal" title="12"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pL3-9a-n1h">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pL3-9a-n1h">
                                         <rect key="frame" x="312" y="336" width="32" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="ODR"/>
+                                        <state key="normal" title="15"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Hb-AT-vFa">
                                         <rect key="frame" x="172" y="336" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="OD"/>
+                                        <state key="normal" title="18"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LL8-6X-EEl">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LL8-6X-EEl">
                                         <rect key="frame" x="32" y="336" width="31" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="ODL"/>
+                                        <state key="normal" title="21"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8cW-aJ-H9C">
                                         <rect key="frame" x="32" y="172" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="OL"/>
+                                        <state key="normal" title="24"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avr-kd-MXR">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avr-kd-MXR" userLabel="23">
                                         <rect key="frame" x="86" y="172" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="ML"/>
+                                        <state key="normal" title="23"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DOd-61-2Nb">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DOd-61-2Nb" userLabel="22">
                                         <rect key="frame" x="140" y="172" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="L"/>
+                                        <state key="normal" title="22"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jr3-cJ-O4z">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jr3-cJ-O4z" userLabel="11">
                                         <rect key="frame" x="259" y="172" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="MR"/>
+                                        <state key="normal" title="11"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lSQ-oU-g2N">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lSQ-oU-g2N" userLabel="10">
                                         <rect key="frame" x="205" y="172" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="R"/>
+                                        <state key="normal" title="10"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L7i-3b-HqF">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L7i-3b-HqF" userLabel="4">
                                         <rect key="frame" x="172" y="134" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="U"/>
+                                        <state key="normal" title="4"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lcf-59-Dzt">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lcf-59-Dzt" userLabel="16">
                                         <rect key="frame" x="172" y="210" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="D"/>
+                                        <state key="normal" title="16"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9h5-M9-Tvn">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9h5-M9-Tvn" userLabel="2">
                                         <rect key="frame" x="85" y="46" width="33" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="MUL"/>
+                                        <state key="normal" title="2"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWw-4M-2LO">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWw-4M-2LO" userLabel="5">
                                         <rect key="frame" x="172" y="46" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="MU"/>
+                                        <state key="normal" title="5"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCD-AX-rS3">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCD-AX-rS3" userLabel="8">
                                         <rect key="frame" x="257" y="46" width="34" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="MUR"/>
+                                        <state key="normal" title="8"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kUK-b0-lzY">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kUK-b0-lzY" userLabel="20">
                                         <rect key="frame" x="85" y="298" width="32" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="MDL"/>
+                                        <state key="normal" title="20"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wV8-NS-YE0">
                                         <rect key="frame" x="172" y="298" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="MD"/>
+                                        <state key="normal" title="17"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yi5-I5-eAh">
                                         <rect key="frame" x="205" y="210" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="DR"/>
+                                        <state key="normal" title="13"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jrg-6Y-unu">
                                         <rect key="frame" x="140" y="210" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="DL"/>
+                                        <state key="normal" title="19"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VXj-1E-dwA">
                                         <rect key="frame" x="140" y="134" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="UL"/>
+                                        <state key="normal" title="1"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iMF-hi-BhY">
                                         <rect key="frame" x="205" y="134" width="30" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="UR"/>
+                                        <state key="normal" title="7"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1kl-tr-ygR">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1kl-tr-ygR">
                                         <rect key="frame" x="257" y="298" width="34" height="30"/>
                                         <animations/>
-                                        <state key="normal" title="MDR"/>
+                                        <state key="normal" title="14"/>
                                     </button>
                                 </subviews>
                                 <animations/>
